@@ -1,3 +1,7 @@
+Wed Feb  7 22:33:58 2007  Koichi Sasada  <ko1@atdot.net>
+
+	* eval_intern.h, yarvcore.h: remove unused macro definition.
+
 Wed Feb  7 22:30:28 2007  Koichi Sasada  <ko1@atdot.net>
 
 	* eval.c: fixed to use ANSI function style.
